2006-03-23  Alexander Malysh <amalysh at kannel.org>
  * gw/bb_boxc.c: fixed compiler warning in function when using 64bit system.
    Thanks to Vincent CHAVANIS <vincent at telemaque.fr> for pointing to this.

2006-03-23  Alexander Malysh <amalysh at kannel.org>
  * configure.in: added AC_C_INLINE check again. That was wrongly reverted
    with a last commit from Stipe.

2006-03-22  Stipe Tolj  <stolj at kannel.org>
  * configure[.in], gwlib/charset.h: reverting Andreas commit regarding
    libxml2 header due to -1 veto vote by Alex and Stipe.
  
2006-03-17  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_http.c: Feature add #322. Added Clickatell HTTP interface.
    Thanks to Rene Kluwen <rene.kluwen at chimit.nl> for provided patch.

2006-03-17  Alexander Malysh <amalysh at kannel.org>
  * gwlib/octstr.c: Fixed #323.
    Thanks to Rene Kluwen <rene.kluwen at chimit.nl> for provided patch.

2006-03-14  Alexander Malysh <amalysh at kannel.org>
  * gw/heartbeat.c: fixed #320 that heartbeat_stop crashed when no heartbeat
    at all is activated.
    Thanks to Rene Kluwen <rene.kluwen at chimit.nl> for provided patch.

2006-03-14  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smpp_pdu.def: fixed #317. SMPP v3.4 defines that validity_period
    and schedule_delivery_time unused in deliver_sm but SMPP v3.3 states that
    parameters for the deliver_sm are the same as for submit_sm. So make length
    of validity_period and schedule_delivery_time 17 as for submit_sm. It doesn't
    break SMPP v3.4 clients because these values are NULTERMINATED.

2006-03-14  Alexander Malysh <amalysh at kannel.org>
  * gwlib/mime.[ch]: minimal additional patch for the mime module, to allow
    client/user access to the start element.
    Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for provided patch.

2006-03-05  Alexander Malysh <amalysh at kannel.org>
  * gwlib/conn.[ch]: added new function 'use_global_trusted_ca_file' that